# iBoot32Patcher

./: CMakeLists.txt  Makefile  finders.c  functions.c  iBoot32Patcher.c  lib.c  patchers.c
include/: functions.h
include/iBoot32Patcher/: arm32_defs.h  finders.h  functions.h  iBoot32Patcher.h  patchers.h
